--- a/product.css
+++ b/product.css
@@ -974,6 +974,14 @@ body{
 }
 
 
+.section-subtitle::after {
+  content: url('assets/images/separator.svg');
+  display: block;
+  width: 100px;
+  margin-inline: auto;
+  margin-block-start: 5px;
+}
+
 
 
 
