--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1454,7 +1454,10 @@ body.nav-active { overflow: hidden; }
                                              /*-----------------------------------*\
                                                          #RESERVATION
                                               \*-----------------------------------*/
+.reservation .rf{
+  border-radius: 20px;
 
+}
 .reservation-form {
   margin-block-start: -330px;
   height: 100%;
@@ -1520,6 +1523,7 @@ textarea.input-field {
 .form-right {
   background-repeat: repeat;
   background-position: top left;
+  border-radius: 30px;
 }
 
 
@@ -2096,7 +2100,7 @@ textarea.input-field {
 /*Reservation*/
 
 .reservation .rf{
-  border-radius: 20px;
+  border-radius: 30px;
 
 }
 
